--- a/playbook_kubernetes.yaml
+++ b/playbook_kubernetes.yaml
@@ -5,12 +5,6 @@
    - name: create Docker config directory
      file: path=/etc/docker state=directory
 
-   - name: install Docker
-     apt:
-       name: docker.io
-       state: present
-       update_cache: true
-
    - name: changing Docker to systemd driver
      copy:
       dest: "/etc/docker/daemon.json"
@@ -18,6 +12,12 @@
         {
         "exec-opts": ["native.cgroupdriver=systemd"]
         }
+
+   - name: install Docker
+     apt:
+       name: docker.io
+       state: present
+       update_cache: true
 
    - name: install APT Transport HTTPS
      apt:
@@ -37,13 +37,13 @@
 
    - name: install kubelet
      apt:
-       name: kubelet=1.22.4-00
+       name: kubelet
        state: present
        update_cache: true
 
    - name: install kubeadm
      apt:
-       name: kubeadm=1.22.4-00
+       name: kubeadm
        state: present
 
 - hosts: localhost
@@ -51,6 +51,6 @@
   tasks:
    - name: install kubectl
      apt:
-       name: kubectl=1.22.4-00
+       name: kubectl
        state: present
        force: yes
